# ChainChat

./: .env.example  .gitignore  LICENSE  README.md  hardhat.config.ts  package-lock.json  package.json  serverWallets.mjs  serverWallets.ts
agent/: README.md
agent/python/examples/cdp-langchain-chatbot/: chatbot.py  pyproject.toml
contracts/: portfolio.sol
scripts/: deploy.ts  testing_contract.ts
web_app/: .env.example  next.config.mjs  package-lock.json  package.json
web_app/src/app/: globals.css  layout.tsx  page.tsx
web_app/src/app/_provider/: QueryProvider.tsx
web_app/src/app/ai-agent-strategies/: page.tsx
web_app/src/app/ai-agent-strategies/components/: chatbot-modal.tsx  (+3 more)
web_app/src/app/ai-analytics-n-predictions/: layout.tsx  page.tsx
web_app/src/app/homepage/: layout.tsx  page.tsx
web_app/src/app/markets/: page.tsx
web_app/src/app/portfolio/: layout.tsx  page.tsx
web_app/src/components/: MaxWidthWrapper.tsx  Navbar.tsx  theme-provider.tsx
web_app/src/components/ui/: data-table.tsx  form.tsx
web_app/src/lib/: config.ts  index.ts  privy.ts
web_app/src/lib/auth/: userManager.ts
web_app/src/lib/db/: supabase.ts  test.ts  types.ts
web_app/src/lib/hooks/: index.ts  types.ts  useAuth.ts  useWalletConnection.tsx  useWalletSetup.ts  useWalletSetup.tsx  userAuth.ts
web_app/src/lib/services/: walletService.ts
web_app/src/lib/utils/: errors.ts
web_app/src/lib/wallet/: actions.ts
web_app/src/server/agent/python/examples/cdp-langchain-chatbot/: audio_util.py  chatbot.py  pyproject.toml  requirements.txt  wallet_data.txt
(+14 files in other folders)
